Fixed styling overflow issue

--- a/src/pages/categoryProducts/categoryProducts.scss
+++ b/src/pages/categoryProducts/categoryProducts.scss
@@ -1,7 +1,7 @@
 @import "../../mixins.scss";
 
 .category-products {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 120px);
   display: flex;
   flex-direction: column;
   gap: 20px;
